# odili-youtube-growth-engine

./: conftest.py  replit.md  run.py  startup.py  test_growth_brain.py  test_intent_corpus_multilingual.py  test_network_failure_alert.py
app/: db.py  main.py
models/: schemas.py
python-backend/: README.md  pyproject.toml  requirements.txt
python-backend/app/: branding.py  db.py  main.py  startup.py
python-backend/app/models/: db_models.py  schemas.py
python-backend/app/routes/: admin_ui.py  analytics.py  content.py  emails.py  growth.py  health.py  ideas.py  landing.py  newsletter.py  playlist.py  topics.py  unsubscribe.py
python-backend/app/services/: ai_service.py  analytics_service.py  auto_scheduler.py  content_service.py  drip_service.py  email_sender_service.py  email_service.py  growth_service.py  headlines.py  news_service.py  newsletter_service.py  playlist_service.py  segment_service.py  tag_service.py  topic_service.py  youtube_intelligence_service.py
python-backend/data/: odili.db
routes/: admin.py  content.py  conversion.py  growth.py  growth_brain.py  landing.py  lead_evangelist.py  news.py  newsletter.py  playlist_resources.py  seo.py  subscribe_ui.py  topics.py  video_grid.py  youtube_packages.py
services/: analytics_service.py  comment_reply_service.py  conversion_engine.py  ctr_phrase_engine.py  drip_service.py  email_queue_service.py  email_sender_service.py  featured_service.py  geo_service.py  growth_brain_service.py  lead_evangelist_service.py  newsletter_service.py  playlist_resource_service.py  scheduler_service.py  (+5 more)
(+36 files in other folders)
